# fold

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LikelihoodEstimator.py  OverlapTransformer.py  PsdEstimator.py  README.md  SpectralTransformer.py  TSVToDataFrame.py  bible_bert_embedding_output.txt  bible_bert_likelihood_output.txt  constants.py  docker-compose.yaml  download_bert.py  hello.py  pipeline.py  plan.md  plot_pval_bands.py  pyproject.toml  todo.md
cache/pipeline_outputs/: bible_bert_0.000-1.000_kl_divergence_matrix_layer12.pkl
data/: asjp_ldnd_distances_by_iso2.csv  lexical-distance-matrix.xlsx
data/aligned/: readme.md
data/aligned/1-b.GEN/: Afrikaans.txt  Albanian.txt  Amharic.txt  Arabic.txt  Bulgarian.txt  Cebuano.txt  Chinese-tok.txt  Chinese.txt  (+54 more)
data/constants/: germanic_intelligibility.csv  romance_intelligibility.csv  slavic_intelligibility.csv
docker/: Dockerfile  docker-compose.yaml  download_bert.py
notes/: 25_3_21.md  25_4_14.md  25_4_4.md  dev_history.md
notes/25_5_12/: 25_5_12.md
notes/25_5_21/: 25_5_12.md  bible_bert_embedding_output.txt  bible_bert_likelihood_output.txt  bible_xlmr_embedding_output.txt  bible_xlmr_likelihood_output.txt  un6_bert_embedding_output.txt  un6_bert_likelihood_output.txt  un6_xlmr_embedding_output.txt  un6_xlmr_likelihood_output.txt  xnli_bert_embedding_output.txt  xnli_bert_likelihood_output.txt  xnli_xlmr_embedding_output.txt  xnli_xlmr_likelihood_output.txt
notes/defense/: defense.md
notes/seminar_2/: presentation.md
notes/thesis/: fsi_contrib.py  pearson_contrib_bert.ml  pearson_contrib_xlmr.ml
significant_output/: bible_xlmr_embedding_output.txt  un6_xlmr_likelihood_output.txt
src/: BandSelectTransformer.py  BibleTransformer.py  EmbedTransformer.py  KlTransformer.py  LikelihoodEstimator.py  MetricTransformer.py  NoOpTransformer.py  OverlapTransformer.py  PsdEstimator.py  PsdNormalizer.py  SampleTokens.py  SpectralTransformer.py  TokenTransform.py  TsvToDataFrame.py  Un6Transformer.py  analysis.py  compute_lex_dist.py  constants.py  embed_pipeline.py  paths.py  pipeline.py  pipeline_options.py  run_pipeline.py  wals_spectra.py  wals_spectra_embed.py
src/fold/: __init__.py  _cli.py
src/scripts/: plot_pval_bands.py  plot_pval_per_layer.py  print_helper.py
tests/: conftest.py  test_analysis.py  test_data_loaders.py  test_metrics.py  test_pipeline_options.py  test_spectral.py  test_transformers.py
(+4050 files in other folders)
