[project]
name = "fold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "joblib>=1.4.2",
    "langcodes>=3.5.0",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pycldf>=1.42.0",
    "rich>=13.9.4",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "triton>=3.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
